--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://calculator-ed323.firebaseapp.com",
   "dependencies": {
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
